# homescript-ls-rs

./: Cargo.toml  README.md  flake.nix
src/: cli.rs  config.rs  ls.rs  main.rs
