[package]
name = "homescript-ls-rs"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/smarthome-go/homescript-ls-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
log = "0.4.20"
loggerv = "0.7.2"
serde = "1.0.188"
smarthome-sdk-rs = { path = "../sdk-rs/"}
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "io-std"] }
toml = "0.7.6"
tower-lsp = "0.20.0"
